Fixed overflow at desktop index

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -14,7 +14,7 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
     width: 1220px;
-    margin: -108px auto 0;
+    margin: 0 auto 70px;
   }
 }
 
@@ -48,7 +48,6 @@
   @media (min-width: $desktop-width) {
     width: 570px;
     min-height: 374px;
-    row-gap: 20px;
   }
 }
 
@@ -78,12 +77,13 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-column: 2 / 3;
-    display: grid;
-    column-gap: 62px;
-    justify-content: start;
-    font-size: 36px;
-    line-height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0 0 30px;
+    width: 457px;
+    gap: 62px;
+    min-height: 106px;
   }
 }
 
@@ -106,7 +106,9 @@
 
   @media (min-width: $desktop-width) {
     background-size: 70px 97px;
-    transform: translate(16px, 43px);
+    right: 63%;
+    top: 11%;
+    transform: none;
   }
 }
 
@@ -153,7 +155,9 @@
 
   @media (min-width: $desktop-width) {
     background-size: 134px 56px;
-    transform: translate(-16px, 32px);
+    right: 47%;
+    top: 18%;
+    transform: none;
   }
 }
 
@@ -198,9 +202,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-row: 3 / -3;
-    margin-top: -10px;
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
     width: 457px;
+    padding: 0;
   }
 
   &--line::after {
@@ -238,7 +243,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-top: 8px;
+    padding: 10px 0;
+    padding: 10px 0 15px;
   }
 
   &:hover,
