--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -17,8 +17,7 @@
   @media (min-width: $desktop-width) {
     display: block;
     width: 1220px;
-    margin-left: 190px;
-    margin-bottom: 265px;
+    margin: 48px auto 265px;
   }
 }
 
@@ -35,14 +34,16 @@
     position: absolute;
     width: 320px;
     height: 302px;
-    background-image: url("../img/jpg/background-mobile.jpg");
+    background-image: url("../img/jpg/background-mobile.webp"),
+    url("../img/jpg/background-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.1;
     content: "";
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/jpg/background-mobile@2x.jpg");
+      background-image: url("../img/jpg/background-mobile@2x.webp"),
+    url("../img/jpg/background-mobile@2x.jpg");
     }
 
     @media (min-width: $tablet-width) {
@@ -59,7 +60,7 @@
       opacity: 0.2;
       background-repeat: no-repeat;
       background-size: cover;
-      transform: translateX(530px);
+      transform: translateX(532px);
 
       @media (min-resolution: 2dppx) {
         background-image: url("../img/jpg/background-desktop@2x.jpg");
@@ -76,12 +77,14 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin: 85px 0 52px;
+    width: 420px;
+    min-height: 180px;
+    padding: 0 80px 0;
 
     &::before {
       position: absolute;
       top: 0;
-      transform: translateX(530px);
+      transform: translateX(532px);
       width: 720px;
       height: 694px;
       background: $color-bg-green;
@@ -103,7 +106,7 @@
   @media (min-width: $desktop-width) {
     position: absolute;
     background: none;
-    transform: translate(366px, -316px);
+    transform: translate(446px,-320px);
   }
 }
 
@@ -169,9 +172,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0;
+    margin: 0 0 0 79px;
     width: 244px;
-    height: 54px;
     font-size: 20px;
     line-height: 20px;
   }
